Basic CSP functionality implemented as a test case. Updated Availability to store Period foriegn key properly. Updated preferences for later use. Fixed overflow issue on timetable dropdown.

--- a/IntelliTabler/timetable/static/css/default.css
+++ b/IntelliTabler/timetable/static/css/default.css
@@ -56,4 +56,10 @@
     z-index: 1000;
   }
 
- 
+ #offCanvasBody {
+  overflow: visible
+ }
+
+ .dropdown-item {
+  cursor: pointer;
+ }
